fixed spacing for logged-out notice on blog

--- a/root/static/css/blog.css
+++ b/root/static/css/blog.css
@@ -107,7 +107,7 @@
 }
 	.blog-content .notice { margin-right: 88px; }
 		.blog-content .comment + .notice { 
-			margin-top: 16px;
+			margin-top: 16px; margin-right: 0;
 		}
 	
 	.post-snippet .more-link { 
